# RobotFoot

./: .gitignore  Guide d'utilisateur.doc  README.md  TODO_PROCHAINE_EQUIPE  config_moteurs  mitchou.txt  test.txt
3D Models/Chest/: Chest_Lower.SLDPRT  Chest_Upper.SLDPRT  Chest_a_Dov.SLDPRT
3D Models/Legs/: AssemblageJambe.SLDASM  Bracket.SLDPRT  BracketFemur.SLDPRT  BracketFoot.SLDPRT  BracketHanche.SLDPRT  Knee.SLDPRT  LeftFoot.SLDPRT  Leg_Femur.SLDPRT  Leg_Foot.SLDPRT  Leg_RightFoot.SLDPRT
Altium/: CAMtastic1.Cam  CAMtastic2.Cam  CAMtastic3.Cam  LEDs.SchDoc  PCB.PcbDoc  UART_DBG.SchDoc  V3.3  V33.SchDoc  V5.SchDoc  Vbatt.SchDoc  audio.SchDoc  buttons.SchDoc  cartectrl.OutJob  cartectrl.PcbDoc  cartectrl.PrjPcb  cartectrl.PrjPcbStructure  lsm330.SchDoc  main.SchDoc  mcu.SchDoc  motors.SchDoc  robotfoot.PcbLib  test.txt
Budget/: Budget Preliminaire.xls  Budget et suivi.xlsx  ListCamera.xlsx  achat fin de session.xlsx
Darwin/src/: App2  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile~  WalkStatus.cpp  WalkStatus.cpp~  WalkStatus.h  WalkStatus.h~  log.txt  main.cpp  main.cpp~  matrixpinv.cpp~  matrixpinv.h~  position.txt
Embedded Computer/: .gitignore  RobotFoot.sln  openCV.bat
Embedded_Computer/: .cproject  .gitignore  .project  CppPloting.m  RobotFoot.bat  gdbscript  makefile  makefile~
Imprimante 3D/: Configuration.h
Marketing/: Le projet RobotFoot.docx  Most.docx  Presentation_Site_Ruben.docx
PCB/: PINMAP.TXT  ZIPPY Compact 1300mAh 2S 25C Lipo Pack.url
TraitementImage/: rose.txt
cartectrl/: .gitignore
solidworks/: AssemblageComplet.SLDASM
(+786 files in other folders)
